Added drawer, Scene type, readOnly parameter

--- a/Dythervin/AutoAttach/Dythervin.AutoAttach.asmdef
+++ b/Dythervin/AutoAttach/Dythervin.AutoAttach.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "AutoAttach",
+    "name": "Dythervin.AutoAttach",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
