--- a/Dythervin/AutoAttach/Dythervin.AutoAttach.asmdef
+++ b/Dythervin/AutoAttach/Dythervin.AutoAttach.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "Dythervin.AutoAttach",
     "rootNamespace": "",
-    "references": [],
+    "references": ["GUID:0d2722be3221441990b3d439a49d3d00"],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
