--- a/Runtime/Dythervin.AutoAttach.asmdef
+++ b/Runtime/Dythervin.AutoAttach.asmdef
@@ -1,7 +1,10 @@
 {
     "name": "Dythervin.AutoAttach",
-    "rootNamespace": "",
-    "references": ["GUID:0d2722be3221441990b3d439a49d3d00"],
+    "rootNamespace": "Dythervin.AutoAttach",
+    "references": [
+        "GUID:91604c9839ab4f65a1701aa5b8a66b9f",
+        "GUID:0d2722be3221441990b3d439a49d3d00"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
