--- a/Runtime/Dythervin.AutoAttach.asmdef
+++ b/Runtime/Dythervin.AutoAttach.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Dythervin.AutoAttach",
     "references": [
         "GUID:91604c9839ab4f65a1701aa5b8a66b9f",
-        "GUID:0d2722be3221441990b3d439a49d3d00"
+        "GUID:0d2722be3221441990b3d439a49d3d00",
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
